# DataMind

./: .env.example  .gitignore  Claude.md  Makefile  README.md  docker-compose.yml  package.json  pytest.ini  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/datamind_api/: __init__.py  config.py  main.py
apps/api/src/datamind_api/middleware/: tenant.py
apps/api/src/datamind_api/routers/: agents.py  datasets.py  gdpr.py  health.py  llm.py  workers.py
apps/api/tests/: test_health.py
apps/web/: .env.local.example  next.config.ts  package.json
docs/agile/: 01-product-backlog.md  02-sprint-01-plan.md  03-user-stories.md  README.md
docs/architecture/: 01-system-overview.md  02-component-diagrams.md  03-sequence-diagrams.md  04-data-flow.md  05-deployment-diagram.md  06-solid-principles.md  07-process-mapping.md  README.md
infra/docker/clickhouse/: config.xml
infra/docker/jupyterhub/: jupyterhub_config.py
infra/docker/kong/: kong.yml
infra/docker/litellm/: config.yaml
infra/docker/mongodb/: init.js
infra/docker/otel/: config.yaml
infra/docker/prometheus/: prometheus.yml
infra/docker/qdrant/: config.yaml
scripts/: health-check.sh
services/auth/: Dockerfile  pyproject.toml
services/auth/src/auth_service/: __init__.py  abac.py  config.py  jwt_handler.py  main.py  models.py
services/auth/src/auth_service/routers/: auth.py
services/auth/tests/: test_abac.py  test_jwt.py
services/dashboard-api/: Dockerfile  pyproject.toml
services/dashboard-api/src/dashboard_api/: __init__.py  config.py  main.py  models.py
services/dashboard-api/src/dashboard_api/routers/: __init__.py  dashboards.py  nl_dashboard.py  realtime.py
services/dashboard-api/tests/: __init__.py  test_dashboard.py
services/ds-workbench/: Dockerfile  pyproject.toml
services/ds-workbench/src/ds_workbench/: __init__.py  config.py  main.py  models.py
services/ds-workbench/src/ds_workbench/ml/: __init__.py  causal_analyst.py  forecaster.py  quantum.py  signing.py  trainer.py
services/ds-workbench/src/ds_workbench/routers/: __init__.py  automl.py  causal.py  deployment.py  forecast.py
services/ds-workbench/tests/: __init__.py  test_automl.py  test_causal.py  test_forecast.py
services/ds-workbench/tests/benchmarks/: __init__.py  bench_automl.py
services/embedding/: pyproject.toml
services/embedding/src/embedding_service/: __init__.py  config.py  main.py
services/mcp-data-connector/: Dockerfile  go.mod
services/mcp-dbt-runner/: Dockerfile  pyproject.toml
services/mcp-dbt-runner/src/mcp_dbt_runner/: __init__.py  config.py  main.py  models.py
services/mcp-dbt-runner/src/mcp_dbt_runner/runner/: __init__.py  executor.py  lineage.py
services/mcp-dbt-runner/tests/: __init__.py  test_runner.py
services/mcp-dbt-runner/tests/benchmarks/: __init__.py  bench_dbt.py
services/mcp-knowledge-base/: Dockerfile  pyproject.toml
services/mcp-knowledge-base/src/mcp_knowledge_base/: __init__.py  config.py  main.py  models.py
services/mcp-knowledge-base/src/mcp_knowledge_base/retrieval/: __init__.py  bm25.py  mmr.py  reranker.py
services/mcp-knowledge-base/tests/: test_retrieval.py
services/mcp-report-generator/: Dockerfile  pyproject.toml
services/mcp-report-generator/src/mcp_report_generator/: __init__.py  config.py  main.py  models.py
services/mcp-report-generator/src/mcp_report_generator/generation/: __init__.py  ipfs.py  merkle.py  pdf.py  pptx.py
services/mcp-report-generator/tests/: test_generation.py
services/mcp-report-generator/tests/benchmarks/: bench_report.py
services/mcp-sql-executor/: Dockerfile  pyproject.toml
services/mcp-sql-executor/src/mcp_sql_executor/: __init__.py  config.py  main.py  models.py
services/mcp-sql-executor/src/mcp_sql_executor/sql/: __init__.py  executor.py  generator.py  verifier.py
services/mcp-sql-executor/tests/: test_sql.py
services/mcp-sql-executor/tests/benchmarks/: bench_nl_to_sql.py
services/mcp-visualization/: Dockerfile  package.json
services/mcp-visualization/src/: config.ts  index.ts  types.ts
services/orchestration-engine/: Dockerfile  pyproject.toml
services/orchestration-engine/src/orchestration_engine/: __init__.py  config.py  main.py  models.py
services/orchestration-engine/src/orchestration_engine/a2a/: __init__.py  server.py
services/orchestration-engine/src/orchestration_engine/antihallucination/: __init__.py  pipeline.py
services/orchestration-engine/src/orchestration_engine/graph/: __init__.py  nodes.py  orchestrator.py  state.py
services/orchestration-engine/tests/: test_antihallucination.py
services/orchestration-engine/tests/benchmarks/: bench_orchestrator.py
services/rag-api/: Dockerfile  pyproject.toml
services/rag-api/src/rag_api/: __init__.py  config.py  main.py  models.py
services/rag-api/src/rag_api/evaluation/: __init__.py  ragas_eval.py
services/rag-api/src/rag_api/graphrag/: __init__.py  extractor.py  neo4j_store.py  pipeline.py
services/rag-api/src/rag_api/memory/: __init__.py  base.py  episodic.py  ltm.py  manager.py  semantic_facts.py  stm.py
services/rag-api/src/rag_api/narrative/: __init__.py  compiler_agent.py  dsr_automation.py  narrative_agent.py
services/rag-api/src/rag_api/retrieval/: __init__.py  mmr.py  reranker.py
services/rag-api/src/rag_api/routers/: __init__.py  dsr.py  graphrag.py  memory.py  narrative.py  retrieval.py
services/rag-api/tests/: test_graphrag.py  test_health.py  test_memory.py  test_retrieval.py
services/rag-api/tests/benchmarks/: bench_rag.py
services/slm-router/: pyproject.toml
services/slm-router/src/slm_router/: Dockerfile  __init__.py  config.py  main.py  models.py  router.py
services/slm-router/src/slm_router/classifiers/: __init__.py  complexity.py  intent.py  sensitivity.py
services/slm-router/tests/: test_router.py
tests/integration/: conftest.py  test_gateway_flow.py  test_phase2_remaining.py  test_phase2_services.py  test_phase3_dashboard.py  test_phase4_ds_workbench.py  test_phase5_rag.py
workers/chart-suggestions/: package.json  tsconfig.json  wrangler.toml
(+57 files in other folders)
