[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamind-api"
version = "0.1.0"
description = "DataMind FastAPI backend — multi-agent orchestration API"
requires-python = ">=3.12"
dependencies = [
    # ---- Web Framework ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # ---- Agent Frameworks ----
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "crewai>=0.80.0",
    "pyautogen>=0.3.0",

    # ---- LLM / Observability ----
    "litellm>=1.55.0",
    "langfuse>=2.55.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # ---- RAG / Vector ----
    "qdrant-client>=1.12.0",
    "llama-index>=0.12.0",
    "sentence-transformers>=3.3.0",
    "rank-bm25>=0.2.2",
    "instructor>=1.7.0",

    # ---- NLI / Anti-Hallucination ----
    "transformers>=4.47.0",
    "torch>=2.5.0",

    # ---- Data Processing ----
    "pandas>=2.2.0",
    "polars>=1.15.0",
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    "pyarrow-flight>=18.0.0",

    # ---- Databases ----
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.2.0",
    "motor>=3.6.0",
    "clickhouse-connect>=0.8.0",
    "neo4j>=5.26.0",

    # ---- Kafka ----
    "aiokafka>=0.11.0",
    "confluent-kafka>=2.6.0",

    # ---- GDPR / PII ----
    "presidio-analyzer>=2.2.35",
    "presidio-anonymizer>=2.2.35",

    # ---- Security / Crypto ----
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyffx>=0.3.0",

    # ---- Task Queue ----
    "celery[redis]>=5.4.0",
    "celery-beat>=2.7.0",

    # ---- Utilities ----
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "dependency-injector>=4.44.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
ml = [
    "autogluon>=1.2.0",
    "mlflow>=2.18.0",
    "feast>=0.40.0",
    "optuna>=4.1.0",
    "shap>=0.46.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.6",
    "statsforecast>=2.0.0",
    "dowhy>=0.11.1",
    "econml>=0.15.1",
]

quantum = [
    "pennylane>=0.39.0",
    "dwave-system>=1.26.0",
    "qiskit>=1.3.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "bandit>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datamind_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
