[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamind-auth"
version = "0.1.0"
description = "DataMind Auth Service — JWT, multi-tenancy, ABAC policy engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0", "ruff>=0.8.0", "mypy>=1.13.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
