[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamind-embedding"
version = "0.1.0"
description = "DataMind Embedding Service — BAAI/bge-m3 with Qdrant collection management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "qdrant-client>=1.12.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
