[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamind-mcp-dbt-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "mcp[cli]>=1.0.0",
    "dbt-core>=1.9.0",
    "dbt-postgres>=1.9.0",
    "neo4j>=5.24.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
    "langfuse>=2.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_dbt_runner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607", "S602", "S605", "S606"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
