[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamind-rag-api"
version = "0.1.0"
description = "DataMind RAG & Memory Service — 4-tier agent memory, GraphRAG, MMR retrieval, RAGAS eval."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis[asyncio]>=5.0.0",
    "qdrant-client>=1.12.0",
    "motor>=3.6.0",
    "asyncpg>=0.30.0",
    "neo4j>=5.24.0",
    "httpx>=0.28.0",
    "litellm>=1.55.0",
    "langfuse>=2.50.0",
    "mlflow>=2.18.0",
    "numpy>=1.26.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "minio>=7.2.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
skips = ["B101", "B311"]
